# floe-py

./: .env.example  .gitignore  LICENSE-COMMERCIAL  LICENSE-MIT  LICENSE.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
site/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
site/content/docs/: api-reference.md  getting-started.md  recipes.md
site/content/examples/: black-scholes-pricing.md  dataset-api-clients.md  dealer-exposures.md  greeks-calculation.md  hedge-flow.md  implied-pdf.md  volatility-analysis.md
site/src/app/: layout.tsx  page.tsx
site/src/app/documentation/: page.tsx
site/src/app/documentation/[slug]/: page.tsx
site/src/app/examples/: page.tsx
site/src/app/examples/[slug]/: page.tsx
site/src/app/playground/: page.tsx
site/src/components/: TableOfContents.tsx
site/src/lib/: markdown.ts  prism.ts
site/src/styles/: globals.css
src/floe/: __init__.py  adapters.py  apiclient.py  blackscholes.py  exposure.py  hedgeflow.py  impliedpdf.py  iv.py  occ.py  rv.py  statistics.py  types.py  volatility.py  volresponse.py
tests/: test_apiclient_integration.py  test_blackscholes.py  test_exposure.py  test_hedgeflow.py  test_impliedpdf.py  test_iv.py  test_occ.py  test_rv.py  test_statistics.py  test_volatility.py  test_volresponse.py
